# power-cube

./: .GitVersion.yaml  .prettierignore  .prettierrc  README.md  apply_migrations.sh  eslint.config.ts  index.html  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yaml  build_publish.yaml
lib/tnoodle-rs/: Cargo.toml  build.rs  maven-deps.json
lib/tnoodle-rs/src/: jvm.rs  lib.rs  puzzle.rs
src/: App.vue  main.ts  router.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 20250615_solves.sql
src-tauri/src/: db.rs  entities.rs  handlers.rs  lib.rs  main.rs  models.rs  puzzle.rs  scramble.rs  util.rs
src-tauri/src/db/: migrations.rs  solves.rs
src-tauri/src/puzzle/: cube.rs  scramble.rs
src/components/: CubeFaceDisplay.vue  FullCubeDisplay.vue  SolvesList.vue  TimerDisplay.vue
src/lib/: cube.ts  duration.test.ts  duration.ts  invoke_wrapper.ts  models.d.ts  models.ts  timer.ts
src/pages/: ErrorView.vue  TimerView.vue
src/routes/: TimerView.vue
src/stores/: error.ts
