[package]
name = "power-cube"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "power_cube_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tnoodle-rs = { version = "0.1.0", path = "../lib/tnoodle-rs" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], default-features = false }
serde_with = { version = "3.13.0", features = ["chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
